589733:UF-281:Pricing issue